--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "main/base.html" %}
+{% block title %}Пользователи{% endblock %}
+{% block content %}
+<h1>Управление пользователями</h1>
+<p>Здесь будет интерфейс пользователей.</p>
+{% endblock %}
